--- a/app/www/index.html
+++ b/app/www/index.html
@@ -24,17 +24,31 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
     <script src="ng/ctrls/main.js"></script>
     <script src="ng/srvs/todo.js"></script>
+    <script src="ng/srvs/category.js"></script>
     <script src="ng/core.js"></script>
 
 </head>
 <!-- SET THE CONTROLLER AND GET ALL TODOS -->
 <body ng-controller="main_ctrl">
     <div class="container">
+<a href="https://github.com/jrmbrgs/mean"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
+        <div class="page-header">
+            <h1>MEAN Todo App
+                <small>MEAN stands for Mongodb ExpressJS AngularJS NodeJS</small>
+            </h1>
+        </div>
         <!-- HEADER AND TODO COUNT -->
+        <!--
         <div class="jumbotron text-center">
             <h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
         </div>
+        -->
+        <h4>TODOs categories</h4>
+        <ul class="nav nav-pills">
+            <li class="active"><a href="#">All <span class="badge">{{todos.length}}</span></a></li>
+            <li ng-repeat="category in categories"><a href="#">{{category.name}}<span class="badge">{{category_todo_xs[category.code].length}}</span></a></li>
+        </ul>
         <input type="checkbox" ng-change="get(hide_done)" ng-model="hide_done"> Hide done items
 
         <!-- TODO LIST -->
